criando fluxo de abertura de sessao, voto e resumo da sessao